# RAG

./: .gitignore  README.md  pyproject.toml
Notebooks/: Simple-Similarity-Search.ipynb  bm25_dense_rrf.ipynb  multi-query-rag.ipynb  native-rag.ipynb  rewrite-query-rag.ipynb
src/: RAG_Vanila.py  main.py
src/config/: settings.py
src/core/: data_loader.py  embeddings.py  llm_providers.py  llms.py  loaders.py  logger.py  pdf_readers.py  root_path.py  splitters.py  vector_store.py
